name:                protolude
version:             0.2.2
synopsis:            A small prelude.
description:         A sensible set of defaults for writing custom Preludes.
homepage:            https://github.com/sdiehl/protolude
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2016-2017 Stephen Diehl
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         https://github.com/sdiehl/protolude/issues
tested-with:         
  GHC == 8.2.2

description:
    A sensible set of defaults for writing custom Preludes.
Source-Repository head
    type: git
    location: git@github.com:sdiehl/protolude.git

library
  exposed-modules:     
    Protolude
    Unsafe
    Debug
    Protolude.Applicative
    Protolude.Base
    Protolude.Bifunctor
    Protolude.Bool
    Protolude.CallStack
    Protolude.Conv
    Protolude.Either
    Protolude.Error
    Protolude.Exceptions
    Protolude.Functor
    Protolude.List
    Protolude.Monad
    Protolude.Monoid 
    Protolude.Panic
    Protolude.Semiring
    Protolude.Show

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    FlexibleContexts
    MultiParamTypeClasses

  ghc-options:
    -Wall
    -fwarn-implicit-prelude

  build-depends:       
      base                
    , array               
    , async               
    , bytestring          
    , containers          
    , deepseq             
    , ghc-prim            
    , hashable            
    , ip 
    , mtl                 
    , mtl-compat          
    , safe                
    , stm                 
    , transformers        
    , text                
    , transformers-compat 
  
  hs-source-dirs:      src
  default-language:    Haskell2010
